Create 'slider' block and add to grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,9 @@
     height: 20px;
     background-color: blueviolet;
 }
+.slider {
+    position: absolute;
+    width: 100px;
+    height: 20px;
+    background-color: green;
+}
