--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,19 @@
     width: 560px;
     height: 300px;
     border: solid #ffffff 3px;
-    background-color: #000000;  
+    background-color: #000000;
+    display: flex;
+}
+
+#game-area {
+    background-color: #B7FF00;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10%;
+    height: 600px;
+    width: 600px;
+    margin: 0 auto;
     left: 0;
     right: 0;
 }
@@ -41,10 +53,12 @@
 body {
     background-color: #000000;
 }
+
 header {
     width: 100%;
-    
+
 }
+
 .title {
     font-family: 'Tourney', sans-serif;
     font-size: 75px;
@@ -52,7 +66,7 @@ header {
     text-align: center;
     display: block;
     margin: 0;
-    
+
 }
 
 .tagline {
@@ -87,6 +101,7 @@ footer {
     bottom: 0;
     margin: 0px;
 }
+
 .socials {
     display: flex;
 }
@@ -111,7 +126,7 @@ footer {
 .copyright {
     color: #000000;
     text-align: center;
-    margin: 0; 
+    margin: 0;
     font-family: 'Tourney', sans-serif;
 }
 
@@ -123,7 +138,23 @@ footer {
 .start-button {
     background-color: #fc0000;
     height: 60px;
-    width: 60px;
+    width: auto;
     font-family: 'Tourney', sans-serif;
     font-size: 30px;
+    z-index: 100;
+    bottom: 5%;
+}
+#reset {
+    display: flex;
+    justify-content: center;
+}
+
+.reset-button {
+    background-color: #fc0000;
+    height: 60px;
+    width: auto;
+    font-family: 'Tourney', sans-serif;
+    font-size: 30px;
+    z-index: 100;
+    bottom: 5%;
 }
