--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,3 +158,25 @@ footer {
     z-index: 100;
     bottom: 5%;
 }
+
+/*Arrow controls*/
+
+#controls {
+    display: flex;
+    position: absolute;
+    bottom: 10%;
+    bottom: 10%;
+    color: red;
+    font-size: 75px;
+    z-index: 100;   
+}
+button {
+    all: unset;
+    cursor: pointer;
+  }
+#left-control {
+    padding: 0px 30px 0px 30px;
+}
+#right-control {
+    padding: 0px 30px 0px 30px;
+}
