--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,10 @@
     margin: 0 auto;
     left: 0;
     right: 0;
+    margin-bottom: 75px;
 }
+
+#game-area>div {}
 
 /* Bricks */
 .brick {
@@ -144,6 +147,7 @@ footer {
     z-index: 100;
     bottom: 5%;
 }
+
 #reset {
     display: none;
     justify-content: center;
@@ -163,33 +167,157 @@ footer {
 
 #controls {
     display: flex;
-    position: absolute;
-    bottom: 10%;
-    bottom: 10%;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
     color: red;
     font-size: 75px;
-    z-index: 100;   
+    z-index: 100;
+    padding-bottom: 50px;
+    margin-top: auto;
 }
+
 button {
     all: unset;
     cursor: pointer;
-  }
+}
+
 #left-control {
     padding: 0px 30px 0px 30px;
 }
+
 #right-control {
     padding: 0px 30px 0px 30px;
 }
 
-@media screen and (max-width: 1300px){
-    
-}
-@media screen and (max-width:1200px){
+@media screen and (max-width: 1300px) {}
 
-}
-@media screen and (max-width: 800px){
+@media screen and (max-width:1200px) {}
 
-}
+@media screen and (max-width: 800px) {}
+
 @media screen and (max-width: 400px) {
+
+/* Game area*/
+
+
+#game-area {
+    height: 600px;
+    width: 600px;
+}
+
+
+/* Bricks */
+.brick {
+    width: 100px;
+    height: 15px;
+}
+
+/* Player / Slider*/
+.slider {
+    width: 100px;
+    height: 15px;
+}
+
+.title {
+    font-size: 50px;
+}
+
+.tagline {
+    font-size: 30px;
+}
+
+.score-text {
+    font-size: 30px;
+}
+
+footer {
+    overflow: hidden;
+}
+
+.socials {
+    display: flex;
+}
+
+.social-media {
+    text-align: center;
+    margin: auto;
+    padding: 0;
+}
+
+.social-media li {
+    display: inline;
+    margin: auto;
+
+}
+
+.social-media i {
+    color: #000000;
+
+}
+
+.copyright {
+    color: #000000;
+    text-align: center;
+    margin: 0;
+    font-family: 'Tourney', sans-serif;
+}
+
+#start {
+    display: flex;
+    justify-content: center;
+}
+
+.start-button {
+    background-color: #fc0000;
+    height: 60px;
+    width: auto;
+    font-family: 'Tourney', sans-serif;
+    font-size: 30px;
+    z-index: 100;
+    bottom: 5%;
+}
+
+#reset {
+    display: none;
+    justify-content: center;
+}
+
+.reset-button {
+    background-color: #fc0000;
+    height: 60px;
+    width: auto;
+    font-family: 'Tourney', sans-serif;
+    font-size: 30px;
+    z-index: 100;
+    bottom: 5%;
+}
+
+/*Arrow controls*/
+
+#controls {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    color: red;
+    font-size: 75px;
+    z-index: 100;
+    padding-bottom: 50px;
+    margin-top: auto;
+}
+
+button {
+    all: unset;
+    cursor: pointer;
+}
+
+#left-control {
+    padding: 0px 30px 0px 30px;
+}
+
+#right-control {
+    padding: 0px 30px 0px 30px;
+}
 
 }
