--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,28 +190,25 @@ button {
     padding: 0px 30px 0px 30px;
 }
 
-@media screen and (max-width: 1300px) {}
-
-@media screen and (max-width:1200px) {}
-
-@media screen and (max-width: 800px) {}
-
 @media screen and (max-width: 400px) {
 
 /* Game area*/
-
-
 #game-area {
-    height: 600px;
-    width: 600px;
+    
+    overflow-x: hidden;
+    padding-bottom: 100px;
 }
-
+.grid {
+    width: 280px;
+}
 
 /* Bricks */
 .brick {
-    width: 100px;
+    width: 50px;
     height: 15px;
+    overflow: hidden;
 }
+
 
 /* Player / Slider*/
 .slider {
@@ -304,7 +301,7 @@ footer {
     font-size: 100px;
     z-index: 100;
     padding-bottom: 50px;
-    margin-top: auto;
+    margin-top: 450px;
 }
 
 button {
