Update 'grid & slider' dimensions on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,7 @@ button {
 
     .grid {
         width: 280px;
+        height: 200px;
     }
 
 
@@ -228,7 +229,7 @@ button {
 
     /* Player / Slider*/
     .slider {
-        width: 100px;
+        width: 50px;
         height: 15px;
     }
 
